--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }} 
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-1
           
       - name: Log in to Amazon ECR
         id: login-ecr
