--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Configure OIDC AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }} 
+          role-to-assume: ${{ secrets.AWS_ROLE }} 
           aws-region: us-east-1
           
       - name: Log in to Amazon ECR
