--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,15 +53,14 @@ jobs:
         run: pip install aws-sam-cli
         
       - name: Deploy Worker Lambda Stack
-        uses: aws-actions/aws-sam-cli-action@v2
-        with:
-          # Your infrastructure definition file (defines the Lambda, SQS, and DB)
-          template_file: worker_service/template.yaml 
-          stack_name: ECE461-ModelWorker-Stack
-          s3_bucket: ece461-sam-deployment-artifacts # Must be an existing S3 bucket for staging
-          capabilities: CAPABILITY_IAM 
-          # Crucially, we pass the ECR image URI to SAM/CloudFormation
-          parameter_overrides: |
-            ImageUriParameter=${{ env.IMAGE_URI }}
-            DynamoDBTableName=Ece461Artifacts
-            S3ArtifactBucketName=ece461-model-sources
+        # Use the native 'sam deploy' command after installing the CLI
+        run: |
+          sam deploy \
+            --template-file worker_service/template.yaml \
+            --stack-name ECE461-ModelWorker-Stack \
+            --s3-bucket ece461-sam-deployment-artifacts \
+            --capabilities CAPABILITY_IAM \
+            --parameter-overrides \
+              ImageUriParameter=${{ env.IMAGE_URI }} \
+              DynamoDBTableName=Ece461Artifacts \
+              S3ArtifactBucketName=ece461-model-sources
