--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -40,12 +40,20 @@ Resources:
       Policies:
         # Grants permissions to WRITE to SQS
         - SQSSendMessagePolicy:
-            QueueUrl: 
-              Ref: ScoringQueue
+            QueueName: 
+              GetAtt: ScoringQueue.QueueName
         # Grants permissions to READ/WRITE to DynamoDB
         - DynamoDBCrudPolicy:
             TableName: 
               Ref: ArtifactsTable
+        # Grant permission to Generate Presigned URL for S3 (Download)
+        - S3ReadPolicy:
+            BucketName: 
+              Ref: S3ArtifactBucketName
+        # Grant permission to Upload to S3 (Upload)
+        - S3WritePolicy:
+            BucketName: 
+              Ref: S3ArtifactBucketName
       Environment:
         Variables:
           DYNAMODB_TABLE_NAME: 
