--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -73,7 +73,7 @@ Resources:
         SearchArtifacts:
           Type: Api
           Properties:
-            Path: /artifacts
+            Path: /artifact
             Method: POST
 
         PostArtifactModel:
@@ -101,7 +101,7 @@ Resources:
         DownloadArtifact:
           Type: Api
           Properties:
-            Path: /artifacts/{type}/{id}
+            Path: /artifact/{type}/{id}
             Method: GET
         
         Options:
