--- a/scoring_worker/requirements.txt
+++ b/scoring_worker/requirements.txt
@@ -1,7 +1,5 @@
 # scoring_worker/requirements.txt
 boto3
-# Add all core dependencies for your scoring logic here:
-# e.g., numpy, pandas, tensorflow, or huggingface-cli related packages
-# Example:
-# numpy>=1.20.0
-# scikit-learn>=1.0 
+huggingface_hub
+requests
+PyYAML
