--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -73,7 +73,7 @@ Resources:
         SearchArtifacts:
           Type: Api
           Properties:
-            Path: /artifacts
+            Path: /artifact
             Method: POST
 
         PostArtifactModel:
